# hdrgen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
doc/: hdrcvt.1
src/: PQconvert.cpp  bitmapop.cpp  expose2range.c  hdrcvtmain.cpp  hdrgenmain.cpp  pq2.h  warpimage.c
